Added header files to native library.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -21,8 +21,10 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-        Shaders_VAO_VBO/Shader.cpp
-             Textures/Texture.cpp)
+             Shaders_VAO_VBO/Shader.cpp
+             Shaders_VAO_VBO/Shader.h
+             Textures/Texture.cpp
+             Textures/Textures.h)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
