--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -24,7 +24,9 @@ add_library( # Sets the name of the library.
              Shaders_VAO_VBO/Shader.cpp
              Shaders_VAO_VBO/Shader.h
              Textures/Texture.cpp
-             Textures/Textures.h)
+             Textures/Textures.h
+             Utils.cpp
+             Utils.h)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
